# face_recognition_system

./: .env  .env_example  .gitignore  Dockerfile  ENV.yml  ENV1.yml  Makefile  annotations.xml  baseline_identification_metrics.csv  baseline_identification_metrics_w_sizes.csv  docker-compose.yml  environment.yml  identification_metrics.csv  identification_metrics_w_sizes.csv  pyproject.toml  setup.md  vid_face.md
app/: __init__.py  broker.py  detect.py  main.py  main1.py  prepare_dataset.py  ssd.py  test.py
app/clients/: db_manager.py  frame_finder.py  image_dataset.py  json_processor.py  postgres.py
app/clients/video_processors/: opencv.py  opencv_reader.py  opencv_writer.py
app/configs/: baseline_pipeline_conf.yaml  bytetrack.yaml  pipeline_conf.yaml  pipline_conf.yaml
app/metrics/: iou.py  map.py  metrics_calculator.py  recognition_metrics.py
app/models/: arcface.py  facenet.py  resnet.py  sface.py  ssd.py  vgg_16.py  vggface.py  yolo.py  yunet.py
app/pipeline/: face_detector.py  face_recognizer.py  face_search.py  people_detector.py  person_tracker.py  pipeline.py  postprocessor.py
app/pipline/: base_processor.py  face_detector.py  face_recognizer.py  people_detector.py  pipline.py
app/pipline_stages/: people_detector.py
app/utils/: config_reader.py  feature_utils.py
migrations/: 01_create_people.sql  02_create_videos.sql  03_create_video_analysis_results.sql
nbs/: calc_metric.ipynb  cm.ipynb  rm_empty_frames.ipynb  ssd.ipynb  ssd_new.ipynb  test.ipynb  track.ipynb  vgg_face_image.ipynb  vgg_face_video.ipynb
